--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue-flatpickr-component": "^8.1.1",
     "vue-lazyload": "^1.2.6",
     "vue-router": "^3.0.2",
+    "vue2-timepicker": "^1.1.6",
     "vue2-transitions": "^0.2.3"
   },
   "devDependencies": {
