added in autofill

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "vue-lazyload": "^1.2.6",
     "vue-router": "^3.0.2",
     "vue2-timepicker": "^1.1.6",
-    "vue2-transitions": "^0.2.3"
+    "vue2-transitions": "^0.2.3",
+    "firebase": "8.2.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.12.1",
