--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "vue-lazyload": "^1.2.6",
     "vue-router": "^3.0.2",
     "vue2-timepicker": "^1.1.6",
-    "vue2-transitions": "^0.2.3",
-    "firebase": "8.2.3"
+    "vue2-transitions": "^0.2.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.12.1",
@@ -26,7 +25,7 @@
     "@vue/cli-plugin-pwa": "^3.4.0",
     "@vue/cli-service": "^3.4.0",
     "eslint": "^4.19.1",
-    "firebase": "^9.1.3",
+    "firebase": "^8.2.3",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
     "vue-template-compiler": "^2.6.6"
