--- a/package.json
+++ b/package.json
@@ -9,16 +9,18 @@
   },
   "dependencies": {
     "bootstrap-vue": "^2.0.4",
+    "firebase": "8.2.3",
     "flatpickr": "^4.5.1",
     "nouislider": "^11.1.0",
+    "quill": "^1.3.6",
     "register-service-worker": "^1.5.2",
     "vue": "^2.6.6",
     "vue-flatpickr-component": "^8.1.1",
     "vue-lazyload": "^1.2.6",
+    "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.0.2",
     "vue2-timepicker": "^1.1.6",
-    "vue2-transitions": "^0.2.3",
-    "firebase": "8.2.3"
+    "vue2-transitions": "^0.2.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.12.1",
