--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "bootstrap-vue": "^2.0.4",
     "firebase": "8.2.3",
     "flatpickr": "^4.5.1",
+    "html2pdf.js": "^0.10.1",
+    "jspdf": "^2.4.0",
     "nouislider": "^11.1.0",
     "quill": "^1.3.6",
     "register-service-worker": "^1.5.2",
     "vue": "^2.6.6",
     "vue-flatpickr-component": "^8.1.1",
+    "vue-html2pdf": "^1.8.0",
     "vue-lazyload": "^1.2.6",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.0.2",
