--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   },
   "dependencies": {
     "bootstrap-vue": "^2.0.4",
-    "firebase": "8.2.3",
     "flatpickr": "^4.5.1",
+    "html2pdf": "^0.0.11",
     "html2pdf.js": "^0.10.1",
     "jspdf": "^2.4.0",
     "nouislider": "^11.1.0",
@@ -31,7 +31,7 @@
     "@vue/cli-plugin-pwa": "^3.4.0",
     "@vue/cli-service": "^3.4.0",
     "eslint": "^4.19.1",
-    "firebase": "^8.2.3",
+    "firebase": "^8.10.0",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
     "vue-template-compiler": "^2.6.6"
