--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vue-lazyload": "^1.2.6",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.0.2",
+    "vue2-editor": "^2.10.3",
     "vue2-timepicker": "^1.1.6",
     "vue2-transitions": "^0.2.3"
   },
